<resources>
    <string name="app_name">Movie</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type Movie Name</string>
    <string name="email_hint"><font size="15">E-mail</font></string>
    <string name="password_hint"><font size="15">Password</font></string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="sign_up">REGISTER</string>
</resources>
