<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F0F0F0">

    <androidx.cardview.widget.CardView
        android:id="@+id/login_cardView"
        android:layout_width="310dp"
        android:layout_height="381dp"
        android:layout_centerInParent="true"
        android:elevation="30dp"
        android:background="#ffffff"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp"
                android:padding="8dp"
                android:hint="@string/email_hint"
                android:paddingStart="10dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/rectangular_border"
                android:drawableEnd="@drawable/ic_person_outline_black_24dp"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/password_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_address"
                android:layout_marginTop="25dp"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp"
                android:padding="8dp"
                android:hint="@string/password_hint"
                android:paddingStart="10dp"
                android:inputType="numberPassword"
                android:background="@drawable/rectangular_border"
                android:drawableEnd="@drawable/ic_lock_outline_blue_24dp"/>

            <Button
                android:id="@+id/signin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_address"
                android:layout_marginTop="25dp"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp"
                android:text="@string/sign_in"
                android:textColor="#ffffff"
                android:textFontWeight="2"
                android:background="@drawable/signin_button_border"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signin_button"
                android:text="@string/forgot_password"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:fontFamily="sans-serif-black"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgot_password"
                android:layout_marginTop="11dp"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textFontWeight="2"
                android:background="@drawable/signin_button_border"/>


            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_button"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="23dp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/progress_bar_color"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>