<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F2F6FA">

    <androidx.cardview.widget.CardView
        android:id="@+id/login_cardView"
        android:layout_width="310dp"
        android:layout_height="231dp"
        android:layout_centerInParent="true"
        android:elevation="50dp"
        android:background="#ffffff"
        app:cardCornerRadius="7dp">

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp"
                android:padding="10dp"
                android:hint="@string/email_hint"
                android:paddingStart="10dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/rectangular_border"
                android:drawableEnd="@drawable/ic_person_outline_black_24dp"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_address"
                android:layout_marginTop="23dp"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp"
                android:padding="10dp"
                android:hint="@string/password_hint"
                android:paddingStart="10dp"
                android:inputType="numberPassword"
                android:background="@drawable/rectangular_border"
                android:drawableEnd="@drawable/ic_lock_outline_blue_24dp"/>

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_marginTop="23dp"
                android:layout_marginRight="18dp"
                android:layout_marginLeft="18dp"
                android:text="@string/sign_up"
                android:textColor="#ffffff"
                android:textFontWeight="2"
                android:background="@drawable/signin_button_border"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/progress_bar_color"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>